cabal-version:          3.0
name:                   hask-raycaster
version:                0.5.0.0
build-type:             Simple
license:                MIT
license-file:           LICENSE
copyright:              (c) 2018-2023 Chad Reynolds
author:                 Chad Reynolds
maintainer:             cjreynol13@aol.com
stability:              alpha
homepage:               https://github.com/Cjreynol/hask-raycaster
bug-reports:            https://github.com/Cjreynol/hask-raycaster/issues
synopsis:               Implementation of a raycasting renderer using SDL2
description:            This project is a demo essentially, for the purpose of 
                        learning about a graphics style that I have always 
                        enjoyed.  The code is based off of this write-up.  
                        <https://lodev.org/cgtutor/raycasting.html>
category:               Graphics
tested-with:            GHC == 9.2.7
data-files:             test.layout
extra-source-files:     README.md


source-repository head
    type:               git
    location:           git://github.com/Cjreynol/hask-raycaster.git

executable hask-raycaster
    main-is:            Main.hs
    build-depends:        base      ^>= 4.16.4
                        , array     ^>= 0.5.4
                        , matrix    ^>= 0.3.6
                        , mtl       ^>= 2.3.1
                        , text      ^>= 2.0.2
                        , vector    ^>= 0.13.0
                        , sdl2      ^>= 2.5.5
                        , sdl2-gfx  ^>= 0.3.0
                        , sdl2-ttf  ^>= 2.1.3
    other-modules:      Direction, 
                        DisplayState, 
                        EventHandling, 
                        Layout,
                        RaycasterState,
                        Rendering, 
                        Settings,
                        TurnDir
    hs-source-dirs:     src
    --default-extensions:
    other-extensions:   OverloadedStrings, RecordWildCards
    default-language:   GHC2021
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -Wmissing-import-lists

